<resources>
    <string name="wan3456_t_rmb">¥</string>
    <string name="wan3456_t_user">帐号:</string>
    <string name="wan3456_t_pass">密码:</string>
    <string name="wan3456_t_ok">确定</string>
    <string name="wan3456_t_back">返回</string>
    <string name="wan3456_t_backgame">返回游戏</string>
    <string name="wan3456_t_entergame">进入游戏</string>
    <string name="wan3456_t_bind">绑定手机</string>
    <string name="wan3456_t_bind_qq">绑定QQ</string>
    <string name="wan3456_t_getcode">获取验证码</string>
    <string name="wan3456_t_code_hint">请输入验证码</string>
    <string name="wan3456_t_phone_hint">请输入11位手机号码</string>
    <string name="wan3456_t_bindqq_hint">绑定qq,方便客服联系</string>
    <string name="wan3456_t_bindqq_text">立即绑定</string>
    <string name="wan3456_t_confirm">提交</string>
    <string name="wan3456_t_pay_ser">客服</string>
    <string name="wan3456_t_payunion_web_title">银行卡支付</string>
    <string name="wan3456_t_login">登录</string>
    <string name="wan3456_t_fast_register">一键注册</string>
    <string name="wan3456_t_back_login">返回登录</string>
    <string name="wan3456_t_toregister">注册</string>
    <string name="wan3456_t_remember">记住密码</string>
    <string name="wan3456_t_find_pass">找回密码</string>
    <string name="wan3456_t_user_hint">请输入用户名</string>
    <string name="wan3456_t_pass_hint">请输入用户密码</string>
    <string name="wan3456_t_re_user_hint">3&#8211;18位字母数字或下划线</string>
    <string name="wan3456_t_re_pass_hint">6&#8211;20位字母数字</string>
    <string name="wan3456_t_nobind"><u>帐号未绑定手机,联系客服</u></string>
    <string name="wan3456_t_find_user_hint">已绑定账号的手机号</string>
    <string name="wan3456_t_find_code_hint">请输入验证码</string>
    <string name="wan3456_t_find_newpass_hint">请设置新密码(6&#8211;20位字母数字)</string>
    <string name="wan3456_t_pay_title">3456玩支付中心</string>
    <string name="wan3456_t_pay_yuan">元</string>
    <string name="wan3456_t_pay_hint">请输入充值金额</string>
    <string name="wan3456_t_pay_union_explain">温馨提示：\n1.银行卡快捷支付无需开通网银,支持借记卡,信用卡.\n2.支付成功后会自动记住银行卡账号.\n3.如需解绑，请联系易宝客服提供相关信息，联系电话：400-150-0800.</string>
    <string name="wan3456_t_pay_union_pcheck">请选择银行卡类型:</string>
    <string name="wan3456_t_pay_union_cx">借记卡</string>
    <string name="wan3456_t_pay_union_xy">信用卡</string>
    <string name="wan3456_t_pay_alipay_explain">*支付宝支付,安全快捷</string>
    <string name="wan3456_t_pay_wx_explain">*微信支付,安全快捷</string>
    <string name="wan3456_t_pay_yl_explain">*银联支付,安全快捷</string>
    <string name="wan3456_t_pay_exsit_title">确定退出支付</string>
    <string name="wan3456_t_pay_exsit_mes">支付尚为完成,您确定退出支付？</string>
    <string name="wan3456_t_pay_exsit_ok">确定退出</string>
    <string name="wan3456_t_pay_exsit_no">继续支付</string>
    <string name="wan3456_t_float_u">账户</string>
    <string name="wan3456_t_float_gift">礼包</string>
    <string name="wan3456_t_float_ac">专区</string>
    <string name="wan3456_t_float_bbs">论坛</string>
    <string name="wan3456_t_float_tj">新游</string>
    <string name="wan3456_t_float_xx">消息</string>
    <string name="wan3456_t_float_quit">隐藏</string>
    <string name="wan3456_t_account_center">玩家中心</string>
    <string name="wan3456_t_account_pt">3456玩用户</string>
    <string name="wan3456_t_account_modify">修改密码</string>
    <string name="wan3456_t_modify_ohint">请输入当前密码</string>
    <string name="wan3456_t_modify_nhint">请输入新密码</string>
    <string name="wan3456_t_modify_notice">提示：修改密码涉及账号安全，您尚未绑定手机，建议优先绑定手机再修改密码</string>
    <string name="wan3456_t_modify_success">修改成功</string>
    <string name="wan3456_t_modify_title">修改密码</string>
    <string name="wan3456_t_exsit_gift">领取礼包</string>
    <string name="wan3456_t_exsit_ac">新游推荐</string>
    <string name="wan3456_t_exsit_ok">退出游戏</string>
    <string name="wan3456_t_exsit_no">继续游戏</string>
    <string name="wan3456_t_update_mes">游戏有更新,请下载更新包</string>
    <string name="wan3456_t_update_ok">更新</string>
    <string name="wan3456_t_update_no">取消</string>
    <string name="wan3456_t_service">客服中心</string>
    <string name="wan3456_t_service_qq">在线联系客服QQ</string>
    <string name="wan3456_t_service_online">在线提交问题</string>
    <string name="wan3456_t_service_tel">客服电话</string>
    <string name="wan3456_t_ag_title">3456玩游戏服务协议</string>
    <string name="wan3456_t_ag_agreement">已阅读完毕</string>
    <string name="wan3456_t_close">关闭</string>
    <string name="wan3456_t_submit_question">在线提问</string>
    <string name="wan3456_t_account_mymes">我的消息</string>
    <string name="wan3456_t_mescenter_title">消息中心</string>
    <string name="wan3456_t_float_message">消息</string>
    <string name="wan3456_t_unbind">手机解绑</string>
    <string name="wan3456_t_agreement">服务协议</string>
    <string name="wan3456_t_meslist">消息列表</string>
    <string name="wan3456_t_paystatic_title">支付提示</string>
    <string name="wan3456_t_auto_text">切换帐号</string>
    <string name="wan3456_t_account_bottom">Copyright@2015&#8211;2016 YS.All Rights Reserved</string>

</resources>