<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wan3456_dialog_bg1"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="5dip"
        android:text="@string/wan3456_t_pay_exsit_title"
        android:textColor="@color/wan3456_detail_c1"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@drawable/wan3456_d_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/wan3456_t_pay_exsit_mes"
        android:textColor="@color/wan3456_black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/wan3456_payexsit_osure"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5.0dp"
            android:layout_weight="1"
            android:background="@drawable/wan3456_seletor_btn"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/wan3456_t_pay_exsit_no"
            android:textColor="@color/wan3456_white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/wan3456_payexsit_odimiss"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/wan3456_seletor_btn3"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/wan3456_t_pay_exsit_ok"
            android:textColor="@color/wan3456_white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>